# ChangeLog for dev-libs/syck
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/syck/ChangeLog,v 1.34 2014/12/18 21:36:22 dilfridge Exp $

  18 Dec 2014; Andreas K. Huettel <dilfridge@gentoo.org> metadata.xml:
  Drop to maintainer-needed

*syck-0.55-r5 (29 Nov 2014)

  29 Nov 2014; Patrice Clement <monsieurp@gentoo.org> +syck-0.55-r5.ebuild,
  syck-0.55-r4.ebuild:
  Replace einstall with emake install and revbump the ebuild. See #521434.

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> syck-0.55-r4.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  20 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

  14 Dec 2011; Matti Bickel <mabi@gentoo.org> syck-0.55-r4.ebuild:
  Merging categories dev-php5 and dev-php (bug #324665)

  10 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  syck-0.55-r4.ebuild:
  Set SUPPORT_PYTHON_ABIS (bug #312205).

  19 May 2010; Robert Piasek <dagger@gentoo.org> syck-0.55-r4.ebuild:
  added ~arm keyword

  08 Feb 2010; Peter Volkov <pva@gentoo.org> syck-0.55-r4.ebuild:
  Add inherit eutils for epatch.

  14 Jan 2010; Christian Faulhammer <fauli@gentoo.org> syck-0.55-r4.ebuild:
  Transfer Prefix keywords

  09 Aug 2008; Christian Hoffmann <hoffie@gentoo.org> syck-0.55-r4.ebuild:
  removing *possible* depend on dev-php4/syck-php-bindings which is about to
  be removed

  16 Dec 2007; nixnut <nixnut@gentoo.org> syck-0.55-r4.ebuild:
  Stable on ppc wrt bug 198568

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> syck-0.55-r4.ebuild:
  Stable on ppc64; bug #198568

  29 Oct 2007; Luca Barbato <lu_zero@gentoo.org> syck-0.55-r4.ebuild:
  Marked ~ppc and ~ppc64

  21 Oct 2007; <cab@gentoo.org> syck-0.55-r4.ebuild:
  changed from distutils to python eclass (request from dev-zero)

  21 Oct 2007; Michael Sterrett <mr_bones_@gentoo.org> -syck-0.55-r3.ebuild:
  remove old, dep-broken ebuild
