@@ -4,25 +4,13 @@ Hash: SHA256
 AUX syck-0.55-64bit.patch 1008 SHA256 989e62b3cba6a85489df57157a1437098d1995b475edf89658f6d4d23717a182 SHA512 cdb39aa70337c181bb26f9d5853bc3b3431f61c8dbaef386915ee7b0d2b3a118862cac2033467255f286d005b66f54fbf89a17a6cdeaac89bffe63a2a48f7243 WHIRLPOOL a6df8635a7d94e387fbd9cf9155cd9112f0aa6a2b82fc2c2d138b5f6675a3f9452850107ceacf3269a83a1d449019b58f0ee742f7cd7b2077f52c3a67367f201
 DIST syck-0.55.tar.gz 354205 SHA256 ac881945c9dfe5dd6395a5db921e8256d1d359295bb66a1acbfe49fb637c1a3a SHA512 b2adc38e3e616f4eb5f5146baf0e8b385517e32e46ad872c9a451a680ea8c52fead00234286b6bc07fac9ad816d7ece8daf4a77a34c2999926c198de3b6ba1b7 WHIRLPOOL 946a0a372db6d1483a128a7daf2d8d6db74a2e0e7c82902b08faf5089ede6a8afad35cf307a126d9feeb3070561f3aa3b545a38c1f5e1a0f22b255943eec14bf
 EBUILD syck-0.55-r4.ebuild 1301 SHA256 775fc9bb616102ebb9753f3c6c329f60b6a5e069ade969fb097b01eef7e9e789 SHA512 7add45e0afd65fdf0029f71ded43f830b35af57bc8cf04113a34b3c6f9ce4fab73aa47e979e1f1571d7b868ba73b582f43f2d41e86a2219da5ed79c7faadc86d WHIRLPOOL 231ffdab12f932191360ff5f22b6518043cceeeada96dec973a6776e469ed9bcf8e029817c0d25d434b6c00237231f0e59e296eec1c24ffa6babc5185ec5b775
-EBUILD syck-0.55-r5.ebuild 1325 SHA256 5a9aa815813b88c00c256ee120fb798b044fbbda6093caf770f011d470f528cd SHA512 93eed4f08e3d1e8c8a55722c57207c8d2a85744fd4dbfd3e5971d4847eb23c62ba8eacbb4f1aa033aa4283ab2e629d9679da97b9f2b4b102a2ec85c9e5534ce9 WHIRLPOOL 10cdbd6fea43c9bb281b1d1ade00a8a56117fccf54f21d98ebdb9dc45fe322f5d82bbbac37bee300c0e52f5cff36b510c7e9f0bfd5adbd893045eff84b8b4480
-MISC ChangeLog 4230 SHA256 2a77df2c30155dcf30054ba8de97d39ef7edfcf3ac44d31e2ada45a4613592c5 SHA512 649fffd12262d737b097a1332b3f869d8fc88d549c72cf11f0b64cdf53b8de30353baaa5d7e2d1c25f896e062789f2e5524c3bbf9401529afc2997a6d48cc768 WHIRLPOOL 08b29731f91322c1ae654cf66e3bcb9384e719fba52295a4d771882d3d666418a5ecaee51ed72fb66f62b910c2f23425ff825c41d4a52c4b44a081c17c376da3
+EBUILD syck-0.55-r6.ebuild 1250 SHA256 3c0e6cbcd196eef66666d72e9c0f6643dde4c709d1e622660ed562a5d619ae8c SHA512 56fc1436ed2fec5b0a6f0421e5da96d8771f4694f7878ed2cc6a515240e572cb58643e316c5a9b6f9d6013cb9a93dcd8d4c40ce5fddb956026f5b0e84fe8b6b9 WHIRLPOOL a547de5ffbc1d1ad323e3b32e31f58737115f4d26abbc0b34fff1910c21645c4ce3e766eead65726b027092b1b3684e9f9f3dec713f12ff068cafa2acadc8b5c
+MISC ChangeLog 4408 SHA256 bea7685b299001cb2c56e8f883961cb82650e060c23ae09753dc71cfa8779486 SHA512 d30dba51f6ced38e19ec686215f00f1e727afc78e1d6905a701eab41030147d4012f6990e8549d3341f64d51ec267cf383f027087dae73b1cb18117f673babfa WHIRLPOOL 124b1b30b4764ea880d74451dc7aa77998eb88a4a67cd7e522385243cd3ba27d14a098ed5c2f7f5008afcfce501017b7f8127748f006492e026da9a63bd17a6d
 MISC metadata.xml 210 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39 SHA512 4554adeece55ce9adfdadba04443a3ede6ff910b96a11b77bb1f07ddd6bdbc756b8e6e1873660f8f54e67f46db1065980794a6136c6de7883b24d0ee13ff51fe WHIRLPOOL f546bd1233d5a9934ba0480881ceba944cb8ff1869c12ed2421d4ccbb247ee38dc0c7c8b979f10533ad0fc603b5e4829d0ddf174a83d0bda8e8dd62c1c873eeb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUk0jXXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOc3/oP/AsRvz8cH/m7/Q1LHSY1KLsR
-Rm9Qdjog61/fTI1dnrHQ2BNJe1QFm1zfTtn+bFY48w7oGqF44Kh4oFXufc7NXVnv
-ifBZaWnyKn0blSBbJavi2SC53V8PCYJMH1O6vAEOS7iN0omdQYEkhb3TTDq0iorB
-Q57F9J44ElbnVlffnYub7dpnQx22Ru/H2zVNSjQH5lURqIAQqm2jeA+fS/IMWHXE
-LsRpmgcW7B4nI/CMvmUUeOCERmr0ZMFqraw5ioQ8GJaMqKh/0NsF7D7xcNbM1eIv
-OC4hEcqkR2fRX7jdjPPSkvDZSuwNtLtJd7M0pWMHwpGE8HIrrHoP4Yl2yKJ/pHsX
-b3g4J3jMGlVFGLnZ+bAqLKO9ItIHX/31t+7lZ+G/TXV+hOdQBX2rddzUA0cQZk+n
-4fvzk2AWUo7ykStbKODDnLU7217emO3RLZpTiaDvtRA6qZQ/QdJY55xylaZMEAQh
-avfacAWikha7ISYPmrnd5auCB2iz/OfJBWJ9t4i5fE0LvYeOcvjryIVULxpQ3GdZ
-ik+vo4uWv7PtNNo7VQwCDDoUOvHKcwf7HneJzuNcsgaAhyqTL8ZvijKwgN/oLk0D
-zmHbsyROLSJAIT9ZYRvwluf7XyOLzRlVf/HYH6F6X5/N292y1G9XByKdraTrWHzO
-oaTwB6Te9U2RSoOdKmST
-=/uj6
+iEYEAREIAAYFAlTdlOgACgkQso7CE7gHKw106gCeIfrXPeioEnSMIGmFElhOfXh7
+0m4AnR4yFEdWiDKJa3Lhjm4FWNfXJN7l
+=ltQ4
 -----END PGP SIGNATURE-----
