@@ -1,6 +1,8 @@
 DIST dgen-sdl-1.30.tar.gz 608549 SHA256 2ecd364ff64d4ba759b7159d73e1bb8f289f6d5a4b7dfa021d4ab5cbc6443b86 SHA512 bb112c885d54a01082e2585837aba4f084012e86d5244c483f77d091572b6dda7c98769c47ac93cf92e59ad4731af0516a45dd92270fb23aefa0c91c12942f40 WHIRLPOOL 15abacb96d6ccbf9506bb61a51597d7e057baeeccc5b75df3f1167a612b46bc2b7fa8d64b64ef07f9e8043af6eb2906d391a6e2d2a7fb5691c9a6c0e3146a061
 DIST dgen-sdl-1.32.tar.gz 885601 SHA256 23f8344f3f4717584bd0bcbc7d374e7c9ac40f155be9fac36544d82c7d603c30 SHA512 5848572f2e92d554af11e6e5ab5be281be11fff552795be691455ebb0e5aea445ce69eec20a499e4364f16233860a20447f4804f037ee1a41e817a670da3aa38 WHIRLPOOL 6b9a062c6ad9c6458cba8d9fdff281e975b1343bb8d5f3e01e35548920d853dbedd33653f59c7c51c59ed2798ad0477cf41ef0aaf6a330386860153d017d5fdd
+DIST dgen-sdl-1.33.tar.gz 939297 SHA256 99e2c06017c22873c77f88186ebcc09867244eb6e042c763bb094b02b8def61e SHA512 c98ab8cdced62a5d26fd677ad36b031e756620114c946ac067599e84ae6ebcfab731554dd4337b6314c3b5db4601c8a6cc67c285d2aad136e659b9973c01a749 WHIRLPOOL 09c22244983ca960b03a25f633e9885698787a57d3a4e5be2e6af571d71a38d166dbf18aac280e8980ec4e7db2f4eaac6927dd529641c3bd1758a9984e64a211
 EBUILD dgen-sdl-1.30.ebuild 991 SHA256 9250255053b1b429c47ea2c9b7ac1604c42f28c60934f9d3ea32b5ac0975d527 SHA512 4633710d0c883f3277192ef3cdd04c53d31b59aaaf07e8eac35d31e02a7d4ccd34340b53e0a254deeba4af5baf4052b6b0e857fe04fd91e08e07a5482d088b6b WHIRLPOOL 55813e13076925c8706f5d8e68eee3417ba5b1edbad050837d2dd2a8abbb53ee02d6d9ec06a12de477a1077ec8b1804386fb97ab43fa63dceb679ffe710d25d2
-EBUILD dgen-sdl-1.32.ebuild 923 SHA256 b6d7c7a62b0e6540b515996704c7f37ec2fd3982753339eedb192feac345195a SHA512 b43788a8f0a091b2d4ee847c9225d23bf92b0cde9388d22e8ed2fa53a4ce8830a3542b91f17706738a08a08a338e4d888bdf2a13b4ec1a1266ceb0e8ca688c89 WHIRLPOOL eccd7d4ee7dcc4c95284f0cb78857912f5ee741556b6970885199bc9a1c1a4aa623a8878cb3cec9543dfe358413f236b166ffdb28c512598d315474091f98499
-MISC ChangeLog 3138 SHA256 a5d80a448d47b58d40dff09306e15ce15b42b649c52d4102d20aa4211b4c3385 SHA512 999a5e3310222624d4275331d4a7e14a9a08020235cf2d3e5c5317cf2b6a609a5a90e4925bafe989aa4b1b7dbaa2b7ceae95549921825405518db123ffa25a71 WHIRLPOOL 14352653eadf0f9be5c6feb206c5db37cd77bd5e1ea7d5bc494fa957ddf0cfdf22b1042b55e26df3ff16c009b9fdc0d64bd6846267c956371dfafaf95ae85d0c
+EBUILD dgen-sdl-1.32.ebuild 923 SHA256 4169df7c85c9a4f3c228b9d15e19b17127884c6879de1cd9c741be7c02f7bd4e SHA512 904906f6b46d215096df68dcc13ee3db1c631ed308e3b09bed82b8230c2a532e2de072076df687ea6e9ca1a542585382e677f6e4411896ea09b804a933046987 WHIRLPOOL 00face87ac1e3308f5c76d5a74ab9f1fed2a115d068fbab86eaaaf18fc8c96b4c96cd0d9b5a64644831b73bdf95bf2eb5444e465ddd79ac61c701942f701af13
+EBUILD dgen-sdl-1.33.ebuild 931 SHA256 4f0b07428f922c9dfc3622912871a6a5b75c5f70bf7d6ed6458bc2b6d9e86bc9 SHA512 43ffe46bccc122d39a5136f9ef37c22ad47f9b8e582fb8a84350da976d5fa4451e6deee328f5c00a01d69b0cdf4d852d36d22830dc8cadc4f9811c0734280924 WHIRLPOOL ff8e4df94dbd6b7322866026c3c9b8389f8f90dda6aeadf41c0e000e078db913a40906a832b67093396a30cc4c659bac1b08cfe3e049c6dedabfccca661d5dea
+MISC ChangeLog 3286 SHA256 5cdc0aea5d022e44a70bd4c606d188701e66bf469baac64e4c00d9c97434c7fd SHA512 cf635da43ea7f42b489b948c0cf7db9684a15668f02a84f9c2a6fa1867e209862bedea1f9e9eb09aa24a8bffe52bca836a84e28c4d26a74e706035134c2b2d6b WHIRLPOOL e9b37f4f0d1502edfcbc5d376325aa64e49def4cd1475db38573f1e70d02efe841d2308b80c5a847c374160507aa7194644bd5a334c39abe745a542621a28019
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
