@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm prepare setup
-DEPEND=python? ( !dev-python/pysyck ) python? ( =dev-lang/python-2* )
-DESCRIPTION=Syck is an extension for reading and writing YAML swiftly in popular scripting languages
-EAPI=3
-HOMEPAGE=http://whytheluckystiff.net/syck/
-IUSE=php python
-KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~x86-macos
-LICENSE=BSD
-PDEPEND=php? ( dev-php/pecl-syck !=dev-libs/syck-0.55-r1 )
-RDEPEND=python? ( !dev-python/pysyck ) python? ( =dev-lang/python-2* )
-SLOT=0
-SRC_URI=http://rubyforge.org/frs/download.php/4492/syck-0.55.tar.gz
-_eclasses_=distutils	92e738ea29389cb3f34778d7a349ac71	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	cd022f89fef846d083fc994b9e3d8c04	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=a8eb653b23cde4d7b6091e19d1b0d471
