@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
-DEPEND=media-libs/libsdl[joystick?] app-arch/libarchive opengl? ( virtual/opengl ) x86? ( dev-lang/nasm )
+DEPEND=media-libs/libsdl[joystick?,opengl?] app-arch/libarchive opengl? ( virtual/opengl ) x86? ( dev-lang/nasm )
 DESCRIPTION=A Linux/SDL-Port of the famous DGen MegaDrive/Genesis-Emulator
 EAPI=5
 HOMEPAGE=http://dgen.sourceforge.net/
 IUSE=joystick opengl
 KEYWORDS=~amd64 ~x86
 LICENSE=dgen-sdl BSD BSD-2 free-noncomm LGPL-2.1+ GPL-2+
-RDEPEND=media-libs/libsdl[joystick?] app-arch/libarchive opengl? ( virtual/opengl ) games-misc/games-envd
+RDEPEND=media-libs/libsdl[joystick?,opengl?] app-arch/libarchive opengl? ( virtual/opengl ) games-misc/games-envd
 SLOT=0
-SRC_URI=mirror://sourceforge/dgen/files/dgen-sdl-1.32.tar.gz
+SRC_URI=mirror://sourceforge/dgen/files/dgen-sdl-1.33.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	bc8839608d26ccd57ca4f2f01c67460f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=3b1a6977edbe57e6a4aae6748d7343f9
+_md5_=6c738c1b89a5fd4c93e7e1ab09179dcb
