@@ -1,6 +1,12 @@
 # ChangeLog for games-emulation/dgen-sdl
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/dgen-sdl/ChangeLog,v 1.22 2014/08/25 20:54:17 mr_bones_ Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/dgen-sdl/ChangeLog,v 1.23 2015/02/13 06:24:43 mr_bones_ Exp $
+
+*dgen-sdl-1.33 (13 Feb 2015)
+
+  13 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> +dgen-sdl-1.33.ebuild,
+  dgen-sdl-1.32.ebuild:
+  version bump
 
   25 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org> -dgen-sdl-1.31.ebuild:
   old
