@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/syck
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/syck/ChangeLog,v 1.34 2014/12/18 21:36:22 dilfridge Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/syck/ChangeLog,v 1.35 2015/02/13 06:08:23 idella4 Exp $
+
+*syck-0.55-r6 (13 Feb 2015)
+
+  13 Feb 2015; Ian Delaney <idella4@gentoo.org> +syck-0.55-r6.ebuild,
+  -syck-0.55-r5.ebuild:
+  revbump, conversion -> distutils-r1, rm prior revbump
 
   18 Dec 2014; Andreas K. Huettel <dilfridge@gentoo.org> metadata.xml:
   Drop to maintainer-needed
